@@ -12,8 +12,9 @@ parallel (side-by-side). This function is a front end to \code{\link{barplot}}
 in the \pkg{graphics} package.}
 
 \usage{
-Barplot(x, by, scale = c("frequency", "percent"), 
-  style = c("divided", "parallel"), col = rainbow_hcl(length(levels(by))), 
+Barplot(x, by, scale = c("frequency", "percent"), conditional=TRUE,
+  style = c("divided", "parallel"), 
+  col=if (missing(by)) "gray" else rainbow_hcl(length(levels(by))),
   xlab = deparse(substitute(x)), legend.title = deparse(substitute(by)), 
   ylab = scale, legend.pos = "topright", ...)
 }
@@ -25,10 +26,16 @@ a factor.}
 optionally, a second factor.}
   \item{scale}{
 either \code{"frequency"} (the default) or \code{"percent"}.}
+  \item{conditional}{
+if \code{TRUE} then percentages are computed separately for each value of \code{x} 
+(i.e., conditional percentages of \code{by} within levels of \code{x}); 
+if \code{FALSE} then total percentages are graphed; 
+ignored if \code{scale="frequency"}.}
   \item{style}{
 for two-factor plots, either \code{"divided"} (the default) or \code{"parallel"}.}
   \item{col}{
-colors for the \code{by} factor in two-factor plots; defaults to colors
+if \code{by} is missing, the color for the bars, defaulting to \code{"gray"};
+otherwise colors for the levels of the \code{by} factor in two-factor plots, defaulting to colors
 provided by \code{\link{rainbow_hcl}} in the \pkg{colorspace} package.}
   \item{xlab}{
 an optional character string providing a label for the horizontal axis.}
@@ -60,8 +67,11 @@ if (require(car)){
     data(Mroz)
     with(Mroz, {
       Barplot(wc)
+      Barplot(wc, col="lightblue")
       Barplot(wc, by=hc)
-      Barplot(wc, by=hc, style="parallel", scale="percent")
+      Barplot(wc, by=hc, scale="percent")
+      Barplot(wc, by=hc, style="parallel", 
+        scale="percent", legend.pos="center")
     })
 }
 }
